# VideoPlayer

./: CMakeLists.txt  README.md
include/: VideoPlayer.h
src/: CMakeLists.txt  VideoPlayer.cpp  example.cpp  main.cpp  stdafx.cpp
